--- a/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,61 +6,122 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="row">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="col-9 mx-auto">
+                <div class="card">
+                    <div class="card-body">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+
+                        <div class="row">
+                            <div class="col">
+                                <center>
+                                    <img src="~/GeneralUser.jpg" width="100" />
+                                    <h4>Member Sign Up</h4>
+                                </center>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <hr />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>First Name</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.FirstName" class="form-control" placeholder="First Name" />
+                                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label>Last Name</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.LastName" class="form-control" />
+                                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label>Date of Birth</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.DOB" class="form-control" />
+                                    <span asp-validation-for="Input.DOB" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label>Email</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.Email" class="form-control" />
+                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <label>UserName</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.Username" class="form-control" />
+                                    <span asp-validation-for="Input.Username" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <label>Password</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.Password" class="form-control" />
+                                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <label>Confirm Password</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.ConfirmPassword" class="form-control" />
+                                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <label for="clientType">Dj or Customer?:</label>
+
+                                @*<select name="type" id="type">
+                                    <option value="Dj">Dj</option>
+                                    <option value="customer">customer</option>
+                                </select>*@
+                                
+                                <input placeholder="Dj" asp-for="Input.isDj" class="form-control" />
+                                
+                                <input placeholder="Customer" asp-for="Input.isCustomer" class="form-control" />
+                                
+                            </div>
+
+                            <div class="col-md-12">
+                                <label>About you</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.Bio" class="form-control" />
+                                    <span asp-validation-for="Input.Bio" class="text-danger"></span>
+                                </div>
+                            </div>
+
+
+                            <div class="col-md-12">
+                                <button id="regBtn" type="submit" class="btn btn-primary form-control">Register</button>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+                </div>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
