--- a/DjSpot/wwwroot/css/site.css
+++ b/DjSpot/wwwroot/css/site.css
@@ -2,11 +2,14 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+    background-color: cadetblue;
 }
-
+.navbar {
+    background-color: cadetblue;
+}
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
@@ -18,16 +21,26 @@ a {
   border-color: #1861ac;
 }
 
+label, h4 {
+    color: darkblue;
+}
+
+.card-body {
+    background-color: #87dbdb;
+}
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: cadetblue;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   font-size: 14px;
+  background-color: cadetblue;
+
 }
 @media (min-width: 768px) {
   html {
@@ -46,9 +59,10 @@ html {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
+
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
@@ -61,6 +75,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: cadetblue;
 }
 .footer {
   position: absolute;
