--- a/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,12 +1,6 @@
 ﻿@page
 @model RegisterModel 
 
-@{
-    ViewData["Title"] = "Register";
-}
-
-<h1>@ViewData["Title"]</h1>
-
 <div class="container">
     <div class="row">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -90,13 +84,8 @@
                             <div class="col-md-12">
                                 
                                 <select asp-for="Input.UserType" asp-items="@(Html.GetEnumSelectList<DjSpot.Models.userType>())" class="form-control">
-                                    <option selected="selected" value="">Dj or Customer?:</option>
+                                    <option selected disabled value="Select">Dj or Customer?:</option>
                                 </select>
-
-
-
-
-
 
                             </div>
 
@@ -117,6 +106,7 @@
 
                         </div>
                     </div>
+                </div>
                 </div>
         </form>
     </div>
