--- a/DjSpot/wwwroot/css/site.css
+++ b/DjSpot/wwwroot/css/site.css
@@ -97,7 +97,11 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.userCard{
+.loggedInName {
+    font-family: 'Nixie One', cursive;
+}
+
+.userCard {
     background-color: #74e3fc;
 }
 
@@ -109,7 +113,7 @@ hr{
     color: white
 }
 .check {
-    margin-top: 50px;
+    margin-top: 0px;
     padding: 40px;
     font-family: 'Nixie One', cursive;
 }
