--- a/DjSpot/Views/Home/DjPage.cshtml
+++ b/DjSpot/Views/Home/DjPage.cshtml
@@ -12,7 +12,7 @@
                             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                             <div class="mt-3">
                                 <h4></h4>
-                                <p class="text-secondary mb-1">@ViewBag.UserName</p>
+                                <p class="text-secondary mb-1">@ViewBag.DjUserName</p>
                                 <p class="text-muted font-size-sm">Tacoma, WA</p>
                                 @*<button class="btn btn-outline-primary">Message</button>*@
                             </div>
@@ -33,9 +33,9 @@
                             <span class="text-secondary">bootdey</span>
                         </li>-->
                         @*<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
-                            <span class="text-secondary">@bootdey</span>
-                        </li>*@
+                                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
+                                <span class="text-secondary">@bootdey</span>
+                            </li>*@
                         <!--<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
                             <span class="text-secondary">bootdey</span>
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
             </div>
-            
+
             <!--RIGHT SIDE-->
             <div class="col-md-8">
                 <div class="card mb-3">
@@ -62,30 +62,30 @@
                                 <h6 class="mb-0">Full Name</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                @ViewBag.Name
+                                @ViewBag.DjName
                             </div>
                         </div>
-                        
+
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Email</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                @ViewBag.Email
+                                @ViewBag.DjEmail
                             </div>
                         </div>
-                        
+
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Phone</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                @ViewBag.Phone
+                                @ViewBag.DjPhone
                             </div>
                         </div>
-                        
+
                         <hr>
                     </div>
                 </div>
@@ -96,13 +96,14 @@
                         <div class="card-body">
                             <center>
                                 <h1>About me</h1>
-                                <p>@ViewBag.AboutMe</p>
-                            </center>   
+                                <p>@ViewBag.DjAboutMe</p>
+                            </center>
                         </div>
                     </div>
                 </div>
-                    
+
             </div>
         </div>
     </div>
 </div>
+
