--- a/DjSpot/Views/Home/Index.cshtml
+++ b/DjSpot/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="text-center">
     <div style="text-align: center;">
-        <img src="~/images/header4.jpg" style="max-width: 100%; height: auto;"  />
+        <img src="~/images/DJSPOT.jpg" style="max-width: 100%; height: auto;"  />
     </div>
     <div class="check">
         <hr style="height:2px;border-width:0;color:gray;background-color:blueviolet">
