--- a/DjSpot/Views/Home/DjPage.cshtml
+++ b/DjSpot/Views/Home/DjPage.cshtml
@@ -31,8 +31,33 @@
 
                 <!--WHERE SOUNDCLOUD WIDGET WILL GO-->
                 <div class="card mt-3">
-                    <ul class="list-group list-group-flush">
-                    </ul>
+                    @Html.Raw(Model.SCUrl)
+                    
+                    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
+                    <script type="text/javascript">
+                        (function () {
+                            var widgetIframe = document.getElementById('sc-widget'),
+                                widget = SC.Widget(widgetIframe);
+
+                            widget.bind(SC.Widget.Events.READY, function () {
+                                widget.bind(SC.Widget.Events.PLAY, function () {
+                                    // get information about currently playing sound
+                                    widget.getCurrentSound(function (currentSound) {
+                                        console.log('sound ' + currentSound.get('') + 'began to play');
+                                    });
+                                });
+                                // get current level of volume
+                                widget.getVolume(function (volume) {
+                                    console.log('current volume value is ' + volume);
+                                });
+                                // set new volume level
+                                widget.setVolume(50);
+                                // get the value of the current position
+                            });
+
+                        }());
+                    </script>
+
                 </div>
             </div>
 
