--- a/DjSpot/Views/Home/Profile.cshtml
+++ b/DjSpot/Views/Home/Profile.cshtml
@@ -1,12 +1,6 @@
 ﻿
 @model DjSpot.Models.ApplicationUser
-@*<script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
-    <script>
-        SC.initialize({
-            client_id:
-
-
-    </script>*@
+    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
 <div class="container">
     <div class="main-body">
 
@@ -31,8 +25,32 @@
 
                 <!--WHERE SOUNDCLOUD WIDGET WILL GO-->
                 <div class="card mt-3">
-                    <ul class="list-group list-group-flush">
-                    </ul>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/728553000&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundcloud-shine" title="Shine: Pop" target="_blank" style="color: #cccccc; text-decoration: none;">Shine: Pop</a> · <a href="https://soundcloud.com/soundcloud-shine/sets/ear-candy-fresh-pop-picks" title="Fresh Pop Picks: Ear Candy" target="_blank" style="color: #cccccc; text-decoration: none;">Fresh Pop Picks: Ear Candy</a></div>
+                    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
+                    <script type="text/javascript">
+                        (function () {
+                            var widgetIframe = document.getElementById('sc-widget'),
+                                widget = SC.Widget(widgetIframe);
+
+                            widget.bind(SC.Widget.Events.READY, function () {
+                                widget.bind(SC.Widget.Events.PLAY, function () {
+                                    // get information about currently playing sound
+                                    widget.getCurrentSound(function (currentSound) {
+                                        console.log('sound ' + currentSound.get('') + 'began to play');
+                                    });
+                                });
+                                // get current level of volume
+                                widget.getVolume(function (volume) {
+                                    console.log('current volume value is ' + volume);
+                                });
+                                // set new volume level
+                                widget.setVolume(50);
+                                // get the value of the current position
+                            });
+
+                        }());
+                    </script>
+
                 </div>
             </div>
 
