Added link to contact card in profile

--- a/DjSpot/Views/Home/Profile.cshtml
+++ b/DjSpot/Views/Home/Profile.cshtml
@@ -60,6 +60,7 @@
                     <div class="card-body">
                         <center>
                             <h1>Contact Info</h1>
+                            <a class="card-subtitle" asp-area="" asp-controller="Home" asp-action="UpdateInfo" asp-route-id="@Model.Id">Edit</a>
                         </center>
                         <br />
 
