--- a/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DjSpot/Areas/Identity/Pages/Account/Register.cshtml
@@ -80,6 +80,21 @@
                                 </div>
                             </div>
 
+                            <div class="col-md-4">
+                                <label>City</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.City" class="form-control" />
+                                    <span asp-validation-for="Input.City" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>State</label>
+                                <div class="form-group">
+                                    <input asp-for="Input.State" class="form-control" />
+                                    <span asp-validation-for="Input.State" class="text-danger"></span>
+                                </div>
+                            </div>
+
                             <div class="col-md-12">
 
                                 <select asp-for="Input.UserType" asp-items="@(Html.GetEnumSelectList<DjSpot.Models.userType>())" class="form-control">
