--- a/DjSpot/Views/Home/DjPage.cshtml
+++ b/DjSpot/Views/Home/DjPage.cshtml
@@ -21,7 +21,7 @@
                             <div class="mt-3">
                                 <h4></h4>
                                 <p class="text-secondary mb-1">@Model.UserName</p>
-                                <p class="text-muted font-size-sm">Tacoma, WA</p>
+                                <p class="text-muted font-size-sm">@Model.City, @Model.State</p>
                                 @*<button class="btn btn-outline-primary">Message</button>*@
                             </div>
                         </div>
