--- a/DjSpot/Views/Home/Profile.cshtml
+++ b/DjSpot/Views/Home/Profile.cshtml
@@ -25,7 +25,7 @@
 
                 <!--WHERE SOUNDCLOUD WIDGET WILL GO-->
                 <div class="card mt-3">
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/728553000&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundcloud-shine" title="Shine: Pop" target="_blank" style="color: #cccccc; text-decoration: none;">Shine: Pop</a> · <a href="https://soundcloud.com/soundcloud-shine/sets/ear-candy-fresh-pop-picks" title="Fresh Pop Picks: Ear Candy" target="_blank" style="color: #cccccc; text-decoration: none;">Fresh Pop Picks: Ear Candy</a></div>
+                    @Html.Raw(Model.SCUrl)
                     <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
                     <script type="text/javascript">
                         (function () {
@@ -103,7 +103,7 @@
                         <div class="card-body">
                             <center>
                                 <h1>About me</h1>
-                                <p>@Model.Email</p>
+                                <p>@Model.Bio</p>
                             </center>
                         </div>
                     </div>
